frontend/test/should_fail/computations_return_termination_003.grg
var ::glob:int;

none()
{
	def var x:int = 42;
}

